[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Sprites/Crawler/Monster Attack.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Crawler/Monster Walk.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Crawler/Monster Idle.png" type="Texture" id=3]
[ext_resource path="res://Assets/Scripts/CrawlerController.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/Crawler/Monster Die.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Crawler/Monster Damaged.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.94555, 6.8824 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 18, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 18, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 36, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 36, 18, 18 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 0, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 0, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 2 ), SubResource( 3 ), SubResource( 3 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "Damage",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "Die",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 4.76969, 6.43378 )

[sub_resource type="RectangleShape2D" id=26]

[node name="Crawler" type="KinematicBody2D" groups=[
"Enemies",
]]
script = ExtResource( 4 )
move_speed = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 24 )
animation = "Die"
frame = 6
speed_scale = 2.0
playing = true
flip_h = true

[node name="AttackArea" type="Area2D" parent="AnimatedSprite"]

[node name="AttackShape" type="CollisionShape2D" parent="AnimatedSprite/AttackArea"]
position = Vector2( 9.82807, 1.22772 )
shape = SubResource( 25 )
disabled = true

[node name="PlayerDetectArea" type="Area2D" parent="AnimatedSprite"]

[node name="PlayerDetectShape" type="CollisionShape2D" parent="AnimatedSprite/PlayerDetectArea"]
position = Vector2( 14.8404, -1.87737 )
shape = SubResource( 26 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="AnimatedSprite/AttackArea" to="." method="_on_AttackArea_body_entered"]
